<resources>
    <string name="app_name">Echo</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_phone">Your phone</string>
    <string name="your_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Sign Up</string>
    <string name="login">Login</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="welcome_to_the_dashboard">Welcome to the Dashboard!</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="forward_icon" />
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_post">Write a post...</string>
    <string name="post">Post</string>
    <string name="authenticated_users_avatar">Authenticated users avatar</string>
    <string name="update">Update</string>
    <string name="n_a">N/A</string>
    <string name="edit">Edit</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="save_changes">Save Changes</string>
    <string name="_0_likes">0 Likes</string>
    <string name="timestamp">Timestamp</string>
    <string name="comment_content">Comment content</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="post_comment">Post Comment</string>
    <string name="post_content">Post Content</string>
    <string name="_0_comments">0 Comments</string>
    <string name="_0_followers">0 followers</string>
    <string name="_0_following">0 following</string>
    <string name="my_posts">My Posts</string>
    <string name="_23_jan_2024">23 Jan, 2024</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_posts_available">No posts available</string>
</resources>