<!-- res/layout/edit_profile_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <ImageView
        android:id="@+id/editAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/default_avatar" />

    <Button
        android:id="@+id/changeAvatarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_avatar" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes" />
</LinearLayout>
