<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_a"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/cancelEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/purple"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/saveEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/update"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
